<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:id="@+id/noteItemLayoutParent"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground"
    app:cardCornerRadius="13dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noteItemContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0.8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/itemNoteImage"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/noteItemTitle"
            android:contentDescription="@string/noteContentImage" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/noteItemTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:paddingStart="12dp"
        android:fontFamily="@font/google_sans_medium"
        android:paddingEnd="20dp"
        android:text="@string/this_is_a_title"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemNoteImage" />

        <TextView
            android:id="@+id/noteContentItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="3dp"
            android:ellipsize="end"
            android:fontFamily="@font/google_sans_regular"
            android:maxLines="12"
            android:paddingStart="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp"
            tools:text="@string/some_text"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteItemTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/noteDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/date_rounded"
            android:drawableStart="@drawable/ic_outline_calendar_today_24"
            android:drawablePadding="6dp"
            android:paddingStart="10dp"
            android:paddingTop="3dp"
            android:paddingEnd="10dp"
            android:paddingBottom="3dp"
            android:fontFamily="@font/google_sans_regular"
            android:text="@string/dd_mm_yyyy"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteContentItemTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>