<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.NoteContentFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="10dp">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="start"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/back"
                    android:src="@drawable/ic_round_arrow_back_24"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lastEdited"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edited_on"
                    android:layout_centerInParent="true"
                    android:paddingEnd="15dp"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/saveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginEnd="15dp"
                    android:paddingStart="5dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:contentDescription="@string/save"
                    android:src="@drawable/ic_round_check_24" />

            </RelativeLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollWrapper"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false">

            <EditText
                android:id="@+id/titleTxtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:fitsSystemWindows="true"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="none"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="@id/scrollWrapper"
                app:layout_constraintStart_toStartOf="@id/scrollWrapper"
                app:layout_constraintTop_toTopOf="@id/scrollWrapper"
                app:layout_constraintBottom_toTopOf="@id/noteContentTxtView"/>

            <EditText
                android:id="@+id/noteContentTxtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:paddingBottom="10dp"
                android:background="@null"
                android:fitsSystemWindows="true"
                android:hint="@string/note"
                android:importantForAutofill="no"
                android:inputType="none"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/scrollWrapper"
                app:layout_constraintStart_toStartOf="@id/scrollWrapper"
                app:layout_constraintTop_toBottomOf="@id/titleTxtView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@android:color/holo_red_light"
        android:src="@drawable/ic_round_delete_forever_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>